# Wizardry_Chess_ws

./: .gitignore  README.md  audio.py  requirements.txt
board_state/: package.xml  setup.cfg  setup.py
chess_board-state/: package.xml  setup.cfg  setup.py
chess_motor_schema/: package.xml
chess_nav/: CMakeLists.txt  package.xml
chess_planner/: package.xml  setup.cfg
chess_player_input/: package.xml
motor_schema/: CMakeLists.txt  package.xml
nav/: CMakeLists.txt  package.xml
planner/: package.xml  setup.py
player_input/: package.xml  setup.py
src/chess_board-state/: package.xml
src/chess_board_state/: package.xml  setup.cfg  setup.py
src/chess_board_state/chess_board_state/: board_state.py
src/chess_common_cpp/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/chess_common_py/: package.xml  setup.cfg  setup.py
src/chess_common_py/chess_common_py/: chess_robot.urdf.xacro  config.py  lichess_api.py
src/chess_common_py/launch/: lichess_chess.launch.py  stt_chess.launch.py  (+1 more)
src/chess_interfaces/: CMakeLists.txt  package.xml
src/chess_motor_schema/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/chess_motor_schema/chess_motor_schema/: __init__.py  gantry.py  get_squares.py  motors.py  test_motors.py  test_pins.py
src/chess_nav/: package.xml  setup.cfg  setup.py
src/chess_planner/: package.xml  setup.py
src/chess_player_input/: package.xml  setup.cfg  setup.py
src/chess_player_input/chess_player_input/: keyboard_input.py  lichess_player_input.py  player_input.py  stt.py  stt_player_input.py  test.py  test_stt.py
(+10 files in other folders)
