<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_motor_schema</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ricardometral2005@gmail.com">ricky</maintainer>
  <license>Apache-2.0</license>

  <depend>chess_common_cpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
