<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_player_input</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ricardometral2005@gmail.com">ricky</maintainer>
  <license>Apache-2.0</license>

  <depend>chess_common_py</depend>
  <depend>rclpy</depend>
  <depend>chess_interfaces</depend>

  <depend>python3-pynput</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
